--- a/index.html
+++ b/index.html
@@ -188,20 +188,21 @@
             stages: 1,
             speed: false,
             line: 1,
-            power_rating: 30,
-            motor_rpm: 1780,
+            motor_rated_power: 30,
+            motor_rated_speed: 1780,
             efficiency_class: 0,
             efficiency:0,
-            motor_voltage: 460,
-            amps: 225.4,
+            motor_rated_voltage: 460,
+            motor_rated_flc: 225.4,
             margin: 0,
             fraction: 1,
             cost: .05,
             flow: 2000,
             head: 277,
-            load_method: 0,
-            est_power: 150,
-            field_voltage: 460,
+            //load_method: 0,
+            motor_field_power: 150,
+            motor_field_current: '',
+            motor_field_voltage: 460,
 
             grid: false       
           });        
