--- a/grid.html
+++ b/grid.html
@@ -191,9 +191,9 @@
   <tr>
     <td><div>Pump Efficiency <em>(%)</em></div></td><td></td>
   </tr>
-  <!--<tr>
+  <tr>
     <td><div>Motor Rated Power</div></td><td></td>
-  </tr>-->
+  </tr>
   <tr>
     <td><div>Motor Shaft Power</div></td><td></td>
   </tr>
@@ -268,7 +268,12 @@
     $('th:gt(1)').each((i,e)=>{
       const col=$(`td:nth-child(${$(e).index()+1})`),
         d=setData({},col);
-        d['line']=nm('line',col).val();
+      d['line'] = nm('line',col).val();
+      d['flow'] = cvt(d['flow'],0,'m^3/s',CVT_FLOW);
+      d['motor_rated_power'] = cvt(d['motor_rated_power'],1,'kW',{kW:1.341022218});
+      d['motor_field_power'] = cvt(d['motor_field_power'],1,'kW',{kW:1.341022218});
+      d['head'] = cvt(d['head'],2,'m',{m:3.280839895});
+      
       const r=Bridge.results(d);
       col.filter('#results~tr:not(.th) td').each((i,e)=>{
         $(e).html(`<div><span>${r[2*i]>=0?r[2*i]:''}</span>
