--- a/grid.html
+++ b/grid.html
@@ -268,12 +268,12 @@
     $('th:gt(1)').each((i,e)=>{
       const col=$(`td:nth-child(${$(e).index()+1})`),
         d=setData({},col);
-        
+
       d['line'] = nm('line',col).val();
       d['flow'] = cvt(d['flow'],0,'m^3/s',CVT_FLOW);
-      d['motor_rated_power'] = cvt(d['motor_rated_power'],1,'kW',{kW:1.341022218});
-      d['motor_field_power'] = cvt(d['motor_field_power'],1,'kW',{kW:1.341022218});
-      d['head'] = cvt(d['head'],2,'m',{m:3.280839895});
+      d['motor_rated_power'] = cvt(d['motor_rated_power'],1,'kW',CVT_POWER);
+      d['motor_field_power'] = cvt(d['motor_field_power'],1,'kW',CVT_POWER);
+      d['head'] = cvt(d['head'],2,'m',CVT_DIST);
       
       const r=Bridge.results(d);
       col.filter('#results~tr:not(.th) td').each((i,e)=>{
