--- a/conditions.html
+++ b/conditions.html
@@ -176,7 +176,7 @@
 		main();
 	}
 
-	function cvtObj(d,nms,m,i,nu) {debugger;
+	function cvtObj(d,nms,m,i,nu) {
 		$.makeArray(nms).forEach((nm)=>{
 			d[nm] = cvt(d[nm],i,nu,m);
 		});
