--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
         'm^3/s':15850.32316, 'ft^3/s':448.8311693};
       CVT_POWER = {kW:1.341022218}
       CVT_DIST = {m:3.280839895};
-      
-      function cvt(v,i,nu,m) {
+
+      function cvt(v,m,i,nu) {
         if ($.isNumeric(v)) {
           if (m[Units[i]]) {
             v *= m[Units[i]];
