--- a/conditions.html
+++ b/conditions.html
@@ -9,7 +9,7 @@
 		padding-right: 1rem;
 	}
 	#units td:first-child {
-		color: green;
+		color: #5d9300;
 		padding-right: 1rem;
 	}
 	#units td:last-child, #units th:last-child {
