--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       }
 
       h1 {
-        color: green;
+        color: #5d9300;
       }
 
       th,.th {
-        color: green;
+        color: #5d9300;
         font-weight: bold;
         text-align: center;
         white-space: nowrap;
