--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
         margin-bottom: 10px;   
         background-color: #5d9300;
         box-shadow: 0 3px 3px rgba(0,0,0,.5);
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size:20pt;
+        font-weight:bold;
       }
       body {
         margin:0;
@@ -81,9 +87,10 @@
   </head>
   <body> 
     <div id="banner">
-      <img src="logo_eere.png">
+      <img src="logo_eere.png"><span>Pumping System Assessment Tool</span>
     </div>
     <button id=back onclick='back()'><i class="fa fa-long-arrow-left fa-lg"></i></button>
+    
     <div id=container></div>
     <script>
       function rnd(v) {
