--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 
       .prime {
         color: white;
-        background-color: #0074A1;
+        background-color: dodgerblue;
       }     
       button {
-        color: #0074A1;
+        color: dodgerblue;
         background-color: white;
         border: 1px solid lightgray;
         border-radius: 4px;
         padding: 3px 6px;
       }
       button:hover {
-        border-color: #0074A1;
+        border-color: dodgerblue;
         cursor: pointer;
       }
 
