--- a/conditions.html
+++ b/conditions.html
@@ -1,6 +1,6 @@
 <style scoped>
 	.shade {
-		background-color: lightgray;
+		background-color: #C3C8C8;
 	}
 	#units select {
 		vertical-align: middle;
@@ -29,7 +29,7 @@
 		display: none;
 	}
 	#cond td:nth-child(2):hover {
-		background-color: lightgray;
+		background-color: #C3C8C8;
 		cursor: pointer;
 	}
 	p button {
