--- a/grid.html
+++ b/grid.html
@@ -27,7 +27,7 @@
     display: none;
   }
   tr:nth-child(even) {
-    background-color: lightgray;
+    background-color: #C3C8C8;
   }
 </style>
 <table id=grid>  
