--- a/headtool.html
+++ b/headtool.html
@@ -19,7 +19,7 @@
 		padding-right: 1rem;
 	}
 	#results tr:nth-child(n+2) {
-		background-color: lightgray;
+		background-color: #C3C8C8;
 	}
 	#result {
 		color: #5d9300;
