--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       button {
         color: dodgerblue;
         background-color: white;
-        border: 1px solid lightgray;
+        border: 1px solid #C3C8C8;
         border-radius: 4px;
         padding: 3px 6px;
       }
