--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       input:not([type=radio]) {
         padding: .5em;
         border: solid 1px #fff;
-        box-shadow: inset 1px 1px 2px 0 #707070;
+        box-shadow: inset 1px 1px 2px 0 #5E6A71;
       }
 
       .prime {
