--- a/grid.html
+++ b/grid.html
@@ -175,7 +175,7 @@
   </tr>
   <tr>
     <td><div>Motor Voltage<em>(V)</em></div></td>
-    <td><input name='motor_field_voltage'></td>
+    <td><input name='motor_field_voltage' onchange='vChg(this)'></td>
   </tr>
   <tr id=results>
     <td class='th'>
@@ -259,7 +259,15 @@
       $(e).next().hide();
     }
   }
-  
+  function vChg(e) {
+    if(Math.abs(nm('motor_rated_voltage',col(e)).val()-$(e).val())
+      >nm('motor_field_voltage',col(e)).val()*.1) {
+      
+      nm('motor_field_voltage',col(e)).css('background-color','yellow');
+    } else {
+      nm('motor_field_voltage',col(e)).css('background-color','');
+    }
+  }
   function showHdResults(show) {
     $('#results,#results~tr').toggle(show);
     $('p button').toggle(!show);
