--- a/grid.html
+++ b/grid.html
@@ -279,12 +279,19 @@
       d['line'] = nm('line',col).val();
       cvtObj(d,'flow',CVT_FLOW,0,'m^3/s');
       cvtObj(d,['motor_rated_power','motor_field_power'],CVT_POWER,1,'kW');      
-      cvtObj(d,'head',CVT_DIST,2,'m');      
+      cvtObj(d,'head',CVT_DIST,2,'m');    
       const r=Bridge.results(d);
       col.filter('#results~tr:not(.th) td').each((i,e)=>{
         $(e).html(`<div><span>${r[2*i]>=0?r[2*i]:''}</span>
                         <span style='color:#5d9300'>${r[2*i+1]}</span></div>`);
       });
+      nm('motor_rated_flc',col).css('background-color','#FECB00');
+      const fla=r.pop();
+      if (Math.abs(fla-d.motor_rated_flc)>.5*fla) {
+        nm('motor_rated_flc',col).css('background-color','#FECB00');
+      } else {
+        nm('motor_rated_flc',col).css('background-color','');
+      }
     });
     showHdResults(true);
   }
