--- a/grid.html
+++ b/grid.html
@@ -259,13 +259,12 @@
       $(e).next().hide();
     }
   }
+  function vdTol(n,col,v,tol) {
+    nm(n,col).css('background-color',
+      Math.abs(nm(n,col).val()-v)>tol*v ? '#FECB00' : '');
+  }
   function vChg(e) {
-    const fv = nm('motor_field_voltage',col(e));
-    if(Math.abs(nm('motor_rated_voltage',col(e)).val()-fv.val()) > fv.val()*.1) {
-      fv.css('background-color','#FECB00');
-    } else {
-      fv.css('background-color','');
-    }
+    vdTol('motor_field_voltage',col(e),nm('motor_rated_voltage',col(e)).val(),.1);
   }
   function showHdResults(show) {
     $('#results,#results~tr').toggle(show);
@@ -285,13 +284,7 @@
         $(e).html(`<div><span>${r[2*i]>=0?r[2*i]:''}</span>
                         <span style='color:#5d9300'>${r[2*i+1]}</span></div>`);
       });
-      nm('motor_rated_flc',col).css('background-color','#FECB00');
-      const fla=r.pop();
-      if (Math.abs(fla-d.motor_rated_flc)>.5*fla) {
-        nm('motor_rated_flc',col).css('background-color','#FECB00');
-      } else {
-        nm('motor_rated_flc',col).css('background-color','');
-      }
+      vdTol('motor_rated_flc',col,r.pop(),.5);
     });
     showHdResults(true);
   }
