--- a/grid.html
+++ b/grid.html
@@ -125,7 +125,7 @@
   </tr>
   <tr>
     <td><div>Full-load Current<em>(A)</em></div></td>
-    <td><input name='motor_rated_flc'> <button onclick='estFLA()'>EST</button></td>
+    <td><input name='motor_rated_flc'> <button onclick='estFLA(this)'>EST</button></td>
   </tr>
   <tr>
     <td><div>Size margin <em>(%)</em></div></td>
@@ -267,13 +267,19 @@
     vdTol('motor_field_voltage',col(e),nm('motor_rated_voltage',col(e)).val(),.1);
   }
   function estFLA(e) {
-    results(false);
+      const cl=col(e),d=setData({},cl);
+      d['line'] = nm('line',cl);
+      cvtObj(d,'flow',CVT_FLOW,0,'m^3/s');
+      cvtObj(d,['motor_rated_power','motor_field_power'],CVT_POWER,1,'kW');      
+      cvtObj(d,'head',CVT_DIST,2,'m');
+      nm('motor_rated_flc',cl).val(Bridge.results(d).pop());
+      vdTol('motor_rated_flc',cl,1,999);
   }
   function showHdResults(show) {
     $('#results,#results~tr').toggle(show);
     $('p button').toggle(!show);
   }
-  function results(show) {
+  function results() {
     $('th:gt(1)').each((i,e)=>{
       const col=$(`td:nth-child(${$(e).index()+1})`),
         d=setData({},col);
@@ -282,16 +288,14 @@
       cvtObj(d,'flow',CVT_FLOW,0,'m^3/s');
       cvtObj(d,['motor_rated_power','motor_field_power'],CVT_POWER,1,'kW');      
       cvtObj(d,'head',CVT_DIST,2,'m');    
-      const r=Bridge.results(d);
-      if (show) {
-        col.filter('#results~tr:not(.th) td').each((i,e)=>{
-          $(e).html(`<div><span>${r[2*i]>=0?r[2*i]:''}</span>
-                          <span style='color:#5d9300'>${r[2*i+1]}</span></div>`);
-        });
-      }
+      const r=Bridge.results(d);      
+      col.filter('#results~tr:not(.th) td').each((i,e)=>{
+        $(e).html(`<div><span>${r[2*i]>=0?r[2*i]:''}</span>
+                        <span style='color:#5d9300'>${r[2*i+1]}</span></div>`);
+      });
       vdTol('motor_rated_flc',col,r.pop(),.5);
     });
-    showHdResults(show);
+    showHdResults(true);
   }
 
   function gotoHead(e) {
