--- a/grid.html
+++ b/grid.html
@@ -121,7 +121,7 @@
   </tr>    
   <tr>
     <td><div>Voltage<em>(V)</em></div></td>
-    <td><input name='motor_rated_voltage' onchange='vChg(this)'></td>
+    <td><input name='motor_rated_voltage'></td>
   </tr>
   <tr>
     <td><div>Full-load Current<em>(A)</em></div></td>
@@ -175,7 +175,7 @@
   </tr>
   <tr>
     <td><div>Motor Voltage<em>(V)</em></div></td>
-    <td><input name='motor_field_voltage' onchange='vChg(this)'></td>
+    <td><input name='motor_field_voltage'></td>
   </tr>
   <tr id=results>
     <td class='th'>
@@ -263,9 +263,6 @@
     nm(n,col).css('background-color',
       Math.abs(nm(n,col).val()-v)>tol*v ? '#FECB00' : '');
   }
-  function vChg(e) {
-    vdTol('motor_field_voltage',col(e),nm('motor_rated_voltage',col(e)).val(),.1);
-  }
   function estFLA(e) {
       const cl=col(e),d=setData({},cl);
       d['line'] = nm('line',cl);
@@ -294,6 +291,7 @@
                         <span style='color:#5d9300'>${r[2*i+1]}</span></div>`);
       });
       vdTol('motor_rated_flc',col,r.pop(),.5);
+      vdTol('motor_field_voltage',col,nm('motor_rated_voltage',col).val(),.1);
     });
     showHdResults(true);
   }
