--- a/grid.html
+++ b/grid.html
@@ -282,13 +282,12 @@
   function results() {
     $('th:gt(1)').each((i,e)=>{
       const col = $(`td:nth-child(${$(e).index()+1})`), r = colResults(col);
-      col.filter('#results~tr:not(.th) td').each((i,e)=>{
-        let css='';
-        if (i==2 && r[4]>nm('motor_rated_power',col).val()) {
-          css="style=background-color:#FECB00";
-        }
-        $(e).html(`<div><span ${css}>${r[2*i]>=0 ? rnd(r[2*i]) :''}</span>
-                        <span style='color:#5d9300'>${rnd(r[2*i+1])}</span></div>`);
+      col.filter('#results~tr:not(.th) td').each((i,e)=>{        
+        $(e).html(`<div>
+                    <span ${i==2 && r[4]>nm('motor_rated_power',col).val() ? 'style=background-color:#FECB00' : ''}>
+                      ${r[2*i]>=0 ? rnd(r[2*i]) :''}
+                    </span>
+                    <span style='color:#5d9300'>${rnd(r[2*i+1])}</span></div>`);
       });
       vdTol('motor_rated_flc',col,r.pop(),.5);
       vdTol('motor_field_voltage',col,nm('motor_rated_voltage',col).val(),.1);
