--- a/grid.html
+++ b/grid.html
@@ -274,9 +274,9 @@
   function colResults(col) {
       const d=setData({},col);
       d['line'] = nm('line',col);
-      cvtObj(d,'flow',CVT_FLOW,Units[0],'m^3/s');
-      cvtObj(d,['motor_rated_power','motor_field_power'],CVT_POWER,Units[1],'kW');      
-      cvtObj(d,'head',CVT_DIST,Units[2],'m');
+      cvtObj(d,'flow',CVT_FLOW,0,'m^3/s');
+      cvtObj(d,['motor_rated_power','motor_field_power'],CVT_POWER,1,'kW');      
+      cvtObj(d,'head',CVT_DIST,2,'m');
       const r=Bridge.results(d);
       cvtObj(r,[2,3,4,5,6,7,14],CVT_POWER,'kW',Units[1]);
       return r;
