--- a/curve.html
+++ b/curve.html
@@ -6,12 +6,19 @@
 </style>
 <div>
 	<h1>System Head Curve</h1>
-	<form>
-		Flow rate<br>
-		<input type=number/><br>
-		Head<br>
-		<input type=number/><br>	
-	</form><br>
+	<table>
+		<tr>
+			<th></th>			
+			<th>Flow</th>
+			<th>Head</th>
+			<th>Condition</th>
+		</tr>
+		<tr>
+			<td><input type=checkbox></td>			
+			<td><input></td>
+			<td><input></td>			
+		</tr>
+	</table><br>	
 	<canvas width="700" height="500" /><br>	
 </div>
 
