--- a/curve.html
+++ b/curve.html
@@ -9,6 +9,9 @@
 	td>* {
     	display: block;
 	}
+	button {
+		margin: .5rem 0;
+	}
 }
 </style>
 <div>
@@ -25,8 +28,9 @@
 			<td><input></td>
 			<td><input></td>			
 		</tr>
-	</table><br>	
-	<canvas width="700" height="500" /><br>	
+	</table>
+	<button class='prime'>PLOT</button><br>
+	<canvas width="700" height="500"></canvas>
 </div>
 
 <script>
