--- a/curve.html
+++ b/curve.html
@@ -37,57 +37,56 @@
 <script>
 	function plot() {
 		$('canvas').show();
-		Cnv = $('canvas')[0];
-		Ctx = Cnv.getContext('2d');
-		Ctx.clearRect(0, 0, Cnv.width, Cnv.height);
-debugger;
-		Ctx.strokeStyle = "green";
-		Ctx.fillStyle = "white";
-		Ctx.textAlign = 'center';
-		Ctx.textBaseline = 'middle';
-		Ctx.font = '12px san serif';
+		const cnv = $('canvas')[0], ctx = cnv.getContext('2d');
+		cnv.width+=0;		
+
+		ctx.strokeStyle = "green";
+		ctx.fillStyle = "white";
+		ctx.textAlign = 'center';
+		ctx.textBaseline = 'middle';
+		ctx.font = '12px san serif';
 		PAD = 50;
 		function xPos(x) {
-			return x*(Cnv.width-PAD*2)/3000+PAD;
+			return x*(cnv.width-PAD*2)/3000+PAD;
 		}
 		function yPos(y) {
-			return (300-y)*(Cnv.height-PAD*2)/300+PAD;
+			return (300-y)*(cnv.height-PAD*2)/300+PAD;
 		}
 
-		Ctx.beginPath();
+		ctx.beginPath();
 		for (let x=0; x<=3000; x+=200) {
 			const xp = xPos(x);
-			Ctx.moveTo(xp,PAD);
-			Ctx.lineTo(xp,Cnv.height-PAD);	
-			Ctx.fillText(x,xp,Cnv.height-.75*PAD);	
+			ctx.moveTo(xp,PAD);
+			ctx.lineTo(xp,cnv.height-PAD);	
+			ctx.fillText(x,xp,cnv.height-.75*PAD);	
 		}
 		for (let y=0; y<=300; y+=20) {
 			const yp = yPos(y);
-			Ctx.moveTo(PAD,yp);
-			Ctx.lineTo(Cnv.width-PAD,yp);	
-			Ctx.fillText(y,.75*PAD,yp);	
+			ctx.moveTo(PAD,yp);
+			ctx.lineTo(cnv.width-PAD,yp);	
+			ctx.fillText(y,.75*PAD,yp);	
 		}
-		Ctx.stroke();
-		Ctx.save();
+		ctx.stroke();
+		ctx.save();
 
-		Ctx.fillStyle = 'yellow';
-		Ctx.font = '14px san serif';
-		Ctx.fillText('FLOW RATE',Cnv.width/2,Cnv.height-.33*PAD);
+		ctx.fillStyle = 'yellow';
+		ctx.font = '14px san serif';
+		ctx.fillText('FLOW RATE',cnv.width/2,cnv.height-.33*PAD);
 		
-		Ctx.translate(.33*PAD,Cnv.height/2);
-		Ctx.rotate(-Math.PI/2);
-		Ctx.fillText('HEAD',0,0);	
+		ctx.translate(.33*PAD,cnv.height/2);
+		ctx.rotate(-Math.PI/2);
+		ctx.fillText('HEAD',0,0);	
 		
-		Ctx.restore();
+		ctx.restore();
 
-		Ctx.lineWidth = 2;
-		Ctx.strokeStyle = "yellow";	
-		Ctx.beginPath();
+		ctx.lineWidth = 2;
+		ctx.strokeStyle = "yellow";	
+		ctx.beginPath();
 
 		for (let val of [ [0,57.6], [600,67.3], [1800,144.8], [2400,212.7], [3000,300] ]) {
-			Ctx.lineTo(xPos(val[0]), yPos(val[1]));
+			ctx.lineTo(xPos(val[0]), yPos(val[1]));
 		}
-		Ctx.stroke();
+		ctx.stroke();
 	}
 
 	$('th:gt(1)',Grid).each((i,e)=>{
