--- a/grid.html
+++ b/grid.html
@@ -247,7 +247,7 @@
   <button onclick='this.parentElement.close()'>CANCEL</button>
 </dialog>
 
-<script>//# sourceURL=grid
+<script>//# sourceURL=*grid
   function colCond(e) {
     return Cond[$(e).parent().data('idx')];
   }  
