--- a/curve.html
+++ b/curve.html
@@ -108,17 +108,15 @@
 	$('#container input').change(function (){
 		$('canvas').hide();
 		dom('canvas').width+=0;
-		if ($('#container :checked').length==2) {
-			$('#container button').show();
-		} else if ($('#container :checked').length>2) {
-			$('#container button').show();
-			if (dom('#container :checked:first')==this) {
-				dom('#container :checked:last').checked=false;
-			} else {
-				dom('#container :checked:first').checked=false;
-			}
-		} else if ($('#container :checked').length<2) {
-			$('#container button').hide();
+		switch ($('#container :checked').length) {
+			case 2:
+				$('#container button').show();
+				break;
+			case 3:				
+				$('#container :checkbox').prop('checked',false);
+				this.checked=true;
+			default:
+				$('#container button').hide();
 		}
 	});
 
