--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
       function dom(e) {
         return $(e)[0];
       }
+      function pg(s) {
+        return $('#container').find(s);
+      }
 
       CVT_FLOW = {MGD:694.4422834,'m^3/hr':4.402867544,'L/s':15.85032316, 
         'm^3/s':15850.32316, 'ft^3/s':448.8311693};
